--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>My Routine</h1>
     <h2>Maria Gabrielle</h2>
-    <p><strong>eu acordo às 9:00 da manhã e faço minha higiene pessoal. Depois disso, tento aproveitar algum tempo lendo ou estudando algo. À tarde, estou assistindo à série "You" e costumo passar algum tempo no celular até começar a me vestir para a faculdade. Chego cedo na faculdade para usar o Laboratório Loyola e estudar até a primeira aula começar. Após a aula, volto para casa, tomo um banho, almoço e depois respondo algumas mensagens. Então, escrevo as tarefas para o dia seguinte e assisto a um K-drama antes de ir para a cama. Esta é minha rotina de segunda a domingo.</strong></p>
+    <p><strong>eu acordo às 9:00 da manhã e faço minha higiene pessoal. Depois disso, tento aproveitar algum tempo lendo ou estudando algo. À tarde, estou assistindo à série "You" e costumo passar algum tempo no celular até começar a me vestir para a faculdade.<br> Chego cedo na faculdade para usar o Laboratório Loyola e estudar até a primeira aula começar. Após a aula, volto para casa, tomo um banho, janto e depois respondo algumas mensagens.<br> Então, escrevo as tarefas para o dia seguinte e assisto a um K-drama antes de ir para a cama. Esta é minha rotina de segunda a domingo.</strong></p>
     <i>"Faça como um programador. Quando tudo está errado e confuso, apague tudo e recomece do zero."- Orlando Cordeiro</i>
     <h4>Encontre-me:</h4>
     <p><a href="contato.html/contato.html"> Contato:</a></p>
